#7446: fold the single-use locals into the calls that need them